# notix

./: .gitignore  readme.md
gateserver/: CMakeLists.txt
gateserver/inc/: Cserver.h  HttpConnection.h  const.h
gateserver/src/: Cserver.cpp  HttpConnection.cpp
gateserver_origin/: README.md
gateserver_origin/src/: main.cpp
notix/: .gitignore
notix/Headers/: httpmgr.h  registerdialog.h  singleton.h
notix/Sources/: HttpMgr.cpp
notix/httpserver/: CMakeLists.txt
notix/httpserver/inc/: global.h
notix/httpserver/inc/db/: mysql_pool.h
notix/httpserver/inc/http/: beast_http.h
notix/httpserver/inc/middleware/: http_context.h  middleware.h
notix/httpserver/inc/router/: dynamicroute.h  program_state_test.h  router.h  router_rules.h  staticroute.h
notix/httpserver/inc/session/: session.h  session_manager.h  session_storage.h
notix/httpserver/src/: main.cpp
notix/httpserver/src/db/: mysql_pool.cpp
notix/httpserver/src/http/: beast_http.cpp
notix/httpserver/src/middleware/: middleware.cpp
notix/httpserver/src/router/: dynamicroute.cpp  router.cpp  router_rules.cpp  staticroute.cpp
notix/httpserver/src/session/: session_manager.cpp  session_storage.cpp
notix/httpserver/static/: app.html  count.html  db.json  login.html  register.html  time.html  users.json
notix_client_origin/: notix.pro
notix_client_origin/Headers/: HttpMgr.h  global.h
notix_client_origin/Sources/: registerdialog.cpp
test_boost/: beast_http.cpp  test.cpp  testjson.cpp
